# Hand_written_digitrecognition

./: Pipfile  README.md  app.py  digitrecognition.py  mnist_digit_recognition_model.h5  pyproject.toml  render.yaml  requirements.txt  vercel.json
static/: script.js  style.css
templates/: index.html
